# pysearchlight

./: LICENSE.txt  README.md  pyproject.toml  setup.py
src/pysearchlight/: __init__.py  examples.py  sl.py
tests/: test_sl.py
